--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.bwie.a10cziview.MainActivity">
+    tools:context="com.bwie.ziview.MainActivity">
 
-    <com.bwie.a10cziview.MyView
+    <com.bwie.ziview.MyView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </RelativeLayout>
