--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.bwie.a10cziview.BannerFrameLayout
+<com.bwie.ziview.BannerFrameLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
 
@@ -10,4 +10,4 @@
 
     android:layout_height="wrap_content">
 
-</com.bwie.a10cziview.BannerFrameLayout>
+</com.bwie.ziview.BannerFrameLayout>
